# htslib

./: .appveyor.yml  .cirrus.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  BCFv2.tex  CMakeLists.txt  CODING.md  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.large_positions.md  README.md  abreak.c  aclocal.m4  annot-tsv.1  annot-tsv.c  annot-tsv.txt  bam2bed.c  bam2fq.c  bamidx.c  bamshuf.c  bcf_sr_sort.c  bcf_sr_sort.h  bcfidx.c  bgzf.c  bgzf_internal.h  bgzip.1  bgzip.c  builddir_vars.mk.in  cmakerun.sh  config.h  config.h.in  config.mk.in  config_auto.h.in  (+96 more)
.github/workflows/: windows-build.yml
api/: bgzf.h  knetfile.c  vcf.h
cram/: README  cram.h  cram_codecs.c  cram_codecs.h  cram_decode.c  cram_decode.h  cram_encode.c  cram_encode.h  cram_external.c  cram_index.c  cram_index.h  cram_io.c  cram_io.h  cram_samtools.c  cram_samtools.h  cram_stats.c  cram_stats.h  cram_structs.h  files.c  mFILE.c  mFILE.h  misc.h  open_trace_file.c  open_trace_file.h  os.h  pooled_alloc.c  pooled_alloc.h  rANS_byte.h  rANS_static.c  rANS_static.h  sam_header.c  sam_header.h  string_alloc.c  string_alloc.h  thread_pool.c  thread_pool.h  vlen.c  vlen.h  zfio.c  zfio.h
doc/: BCFv2.tex  index.tex
htslib/: Makefile  bgzf.c  bgzf.h  cram.h  faidx.h  fqidx.h  hfile.h  hfile_mem.h  hts.c  hts.h  hts_defs.h  hts_endian.h  hts_expr.h  hts_log.h  hts_os.h  index.c  kbitset.h  kfunc.h  khash.h  khash_str2int.h  klist.h  knetfile.c  knetfile.h  kroundup.h  ks3file.h  kseq.h  ksort.h  kstring.h  kurl.h  razf.c  razf.h  ref.h  regidx.h  sam.c  sam.h  synced_bcf_reader.c  synced_bcf_reader.h  tbx.c  tbx.h  thread_pool.h  (+5 more)
htslib/cram/: cram.h  cram_codecs.c  cram_decode.c  cram_encode.c  cram_io.c  cram_samtools.c  cram_samtools.h  cram_structs.h  mFILE.h  open_trace_file.c  open_trace_file.h  os.h  pooled_alloc.c  sam_header.c  sam_header.h  string_alloc.c  thread_pool.c
htslib/io_lib/: cram.h  cram_codecs.c  cram_codecs.h  cram_decode.c  cram_encode.c  cram_index.c  cram_index.h  cram_io.c  cram_io.h  cram_samtools.c  cram_samtools.h  cram_stats.c  cram_stats.h  cram_structs.h  dstring.c  dstring.h  error.c  error.h  files.c  hash_table.c  hash_table.h  jenkins_lookup3.c  jenkins_lookup3.h  mFILE.c  misc.h  open_trace_file.c  open_trace_file.h  os.h  pooled_alloc.c  sam_header.c  sam_header.h  string_alloc.h  tar_format.h  thread_pool.c  vlen.c  xalloc.c  xalloc.h  zfio.c
igzip_042/include/: igzip_lib.h  internal_state_size.h  types.h
m4/: ax_lib_bz2.m4  ax_lib_lzma.m4  ax_with_libdeflate.m4  hts_check_compile_flags_needed.m4  hts_hide_dynamic_syms.m4  hts_prog_cc_warnings.m4
memcheck/: Makefile  memcheck.c
misc/: plot-vcfcheck
os/: rand.c
ref_cache/: cmsg_wrap.c  cmsg_wrap.h  http_parser.c  http_parser.h  listener.c  listener.h  log_files.c  log_files.h  main.c  misc.c  misc.h  options.h  ping.c  ping.h  poll_wrap.h  poll_wrap_epoll.c  poll_wrap_poll.c  ref-cache.1  ref_files.c  ref_files.h  request_handler.c  request_handler.h  sendfile_wrap.c  sendfile_wrap.h  server.c  server.h  transaction.c  transaction.h  types.h  upstream.c  upstream.h
samples/: DEMO.md  Makefile  README.md  add_header.c  cram.c  dump_aux.c  flags_demo.c  flags_htsopt_field.c  index_fasta.c  index_multireg_read.c  index_reg_read.c  index_write.c  mod_aux.c  mod_aux_ba.c  mod_bam.c  modstate.c  mpileup.c  pileup.c  pileup_mod.c  qtask_ordered.c  qtask_thread.c  qtask_unordered.c  read_aux.c  read_bam.c  read_fast.c  read_fast_index.c  read_header.c  read_refname.c  read_with_tabix.c  rem_header.c  sample.bed  sample.ref.fa  sample.ref.fq  sample.sam  split.c  split2.c  split_thread1.c  split_thread2.c  update_header.c  write_fast.c
test/: .gitattributes  Makefile  aux#aux.sam  aux#aux_java.cram  bgziptest.gz.gzi  c1#pad2.sam  c1#pad3.sam  ce#1.sam  ce#2.sam  ce#5.sam  ce#5b.sam  ce#large_seq.sam  ce#tag_depadded.sam  ce#tag_padded.sam  ce#unmap1.sam  ce#unmap2.sam  check.chk  check.vcf  colons.bam  colons.bam.bai  compare_sam.pl  cross_validate.sh  embed_MD.sam  ex2.vcf  ex3.sam  fastq.fq  fieldarith.c  fieldarith.sam  formatcols.vcf  header_syms.pl  hfile.c  hts_endian.c  hts_open_fuzzer.c  index.bam.bai  index.bam.csi  index.bcf.csi  index.cram.crai  index.sam  index.sam.gz.bai  index.sam.gz.csi  (+102 more)
test/annot-tsv/: dst.1.txt  dst.10.txt  dst.11.txt  dst.12.txt  dst.14.txt  dst.2.txt  dst.3.txt  dst.4.txt  dst.5.txt  dst.6.txt  dst.7.txt  dst.8.txt  dst.9.txt  out.1.1.txt  out.1.3.txt  out.1.5.txt  out.1.6.txt  out.10.1.txt  out.10.2.txt  out.10.3.txt  out.10.4.txt  out.10.5.txt  out.10.6.txt  out.11.1.txt  out.11.2.txt  out.11.3.txt  out.12.1.txt  out.13.1.txt  out.13.2.txt  out.13.3.txt  out.13.4.txt  out.2.1.txt  out.2.2.txt  out.2.3.txt  out.2.4.txt  out.2.5.txt  out.3.1.txt  out.4.1.txt  out.5.1.txt  out.6.1.txt  (+15 more)
test/base_mods/: MM-MNf1.sam  MM-MNf2.sam  MM-MNp.sam  MM-MZf1.sam  MM-MZf2.sam  MM-MZp.sam  MM-bounds+.sam  MM-bounds-.sam  MM-chebi.out  MM-chebi.sam  MM-double.out  MM-double.sam  MM-explicit-f.out  MM-explicit-x.out  MM-explicit.out  MM-explicit.sam  MM-multi.out  MM-multi.sam  MM-not-all-modded.out  MM-not-all-modded.sam  MM-orient.sam  MM-pileup.out  MM-pileup.sam  MM-pileup2.out  MM-pileup2.sam  MM-variants.out  MM-variants.sam  base-mods.sh  base-mods.tst
test/bcf-sr/: merge.noidx.a.vcf  merge.noidx.abc.expected.out  merge.noidx.b.vcf  merge.noidx.c.vcf  merge.noidx.hdr_order.vcf  merge.noidx.rec_order.vcf  weird-chr-names.1.out  weird-chr-names.2.out  weird-chr-names.3.out  weird-chr-names.4.out  weird-chr-names.5.out  weird-chr-names.6.out  weird-chr-names.vcf
test/bgzf_boundaries/: bgzf_boundaries1.bam  bgzf_boundaries2.bam  bgzf_boundaries3.bam
test/faidx/: ce.1.expected.fa  faidx.1.expected.fa  faidx.fa.expected.fai  faidx.tst  fastqs.1.expected.fq  fastqs.2.expected.fa  fastqs.fq.expected.fai  test-faidx.sh
test/fastq/: UMI.fq  UMI.sam  fastq.tst  filter_casava-q.sam  filter_casava.fa  filter_casava.fq  filter_casava.sam  inter_aux-q.sam  inter_aux.sam  inter_casava-q.sam  inter_casava.sam  inter_casavaOX-q.sam  (+36 more)
win/: rand.c  rand.h
(+124 files in other folders)
